# smallfeishu

./: .gitignore  LICENSE  README.md  config.example.toml  debug_config.py  hello.py  install.py  mypy.ini  pyproject.toml
.trae/rules/: project_rules.md
docs/: README.md
src/feishu/: __init__.py  cli.py  config.py  install.py  notification.py
tests/: __init__.py  test_cli.py  test_config.py  test_notification.py
