[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smallfeishu"
version = "0.1.0"
description = "飞书机器人命令行工具"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["feishu", "notification", "webhook", "cli", "bot"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking"
]

dependencies = [
    "fire>=0.5.0",
    "loguru>=0.7.0",
    "requests>=2.31.0",
    "toml>=0.10.2"
]

[project.urls]
Homepage = "https://github.com/yourusername/smallfeishu"
Repository = "https://github.com/yourusername/smallfeishu"
"Bug Tracker" = "https://github.com/yourusername/smallfeishu/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0"
]

[project.scripts]
feishu = "feishu.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.toml"]

[tool.setuptools.package-dir]
"" = "src"
